--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-action-type-generator": "^1.0.0",
+    "redux-action-type-generator": "^1.0.1",
     "redux-saga": "^1.0.2",
     "styled-components": "^4.1.3",
     "typeface-roboto": "^0.0.54"
