--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.3.0",
     "react": "^16.8.3",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.3",
+    "react-google-login": "^5.0.2",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
