--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.3.0",
