--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@material-ui/core": "^3.9.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.3.0",
     "react": "^16.8.3",
@@ -15,6 +17,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-test-renderer": "^16.8.4",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-action-type-generator": "^1.0.1",
