--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.0.1",
     "redux-action-type-generator": "^1.0.1",
     "redux-saga": "^1.0.2",
+    "sinon": "^7.2.7",
     "styled-components": "^4.1.3",
     "typeface-roboto": "^0.0.54"
   },
