--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.3",
     "react-google-login": "^5.0.2",
+    "react-notifications": "^1.4.3",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
